service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  type: NodePort
  selector:
    app: employee-app
  ports:
    - port: 80
      targetPort: 8080
      #nodePort: 30080
